<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorBgSecondary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.aicontrol.android.widget.CommonToolbar android:id="@+id/toolbar" android:layout_width="fill_parent" android:layout_height="56.0pt" />
    <androidx.core.widget.NestedScrollView android:paddingTop="16.0pt" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingHorizontal="16.0pt">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0pt" android:textStyle="bold" android:textColor="@color/colorTextPrimary" android:paddingBottom="8.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/local_model_select_title" android:paddingHorizontal="4.0pt" />
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler_models" android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="never" android:nestedScrollingEnabled="false" />
            <View android:background="@color/colorBorderBase" android:layout_width="fill_parent" android:layout_height="1.0pt" android:layout_marginVertical="16.0pt" />
            <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/colorContainerBrighten" app:cardCornerRadius="12.0pt" app:cardElevation="1.0pt">
                <LinearLayout android:orientation="vertical" android:padding="16.0pt" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="14.0pt" android:textColor="@color/colorTextSecondary" android:id="@+id/tv_model_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/local_model_status_not_ready" />
                    <TextView android:textSize="12.0pt" android:textColor="@color/colorTextTertiary" android:id="@+id/tv_model_info" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0pt" />
                    <ProgressBar android:id="@+id/progress_download" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="6.0pt" android:layout_marginTop="12.0pt" android:max="100" style="?android:progressBarStyleHorizontal" />
                    <TextView android:textSize="12.0pt" android:textColor="@color/colorTextTertiary" android:id="@+id/tv_download_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0pt" />
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0pt">
                        <com.aicontrol.android.widget.KButton android:textSize="14.0pt" android:id="@+id/btn_download" android:layout_width="0.0dip" android:layout_height="42.0pt" android:text="@string/local_model_download" android:layout_weight="1.0" android:layout_marginEnd="6.0pt" app:btnBackground="@color/colorContainerBrighten" app:btnBorderColor="@color/colorBorderBase" app:btnTextColor="@color/colorTextPrimary" />
                        <com.aicontrol.android.widget.KButton android:textSize="14.0pt" android:id="@+id/btn_load_model" android:layout_width="0.0dip" android:layout_height="42.0pt" android:text="@string/local_model_load" android:layout_weight="1.0" android:layout_marginStart="6.0pt" />
                    </LinearLayout>
                    <TextView android:textSize="14.0pt" android:textStyle="bold" android:textColor="@color/colorTextPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0pt" android:text="@string/local_model_params_title" />
                    <TextView android:textSize="12.0pt" android:textColor="@color/colorTextSecondary" android:id="@+id/tv_tip" android:paddingBottom="12.0pt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0pt" android:text="@string/local_model_tip" />
                    <TextView android:textSize="13.0pt" android:textStyle="bold" android:textColor="@color/colorTextPrimary" android:paddingBottom="6.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/local_model_temperature" android:paddingHorizontal="4.0pt" />
                    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/colorContainerBrighten" app:cardCornerRadius="12.0pt" app:cardElevation="1.0pt">
                        <SeekBar android:id="@+id/seekbar_temperature" android:layout_width="fill_parent" android:layout_height="40.0pt" android:max="200" android:progress="70" android:paddingHorizontal="16.0pt" />
                    </androidx.cardview.widget.CardView>
                    <TextView android:textSize="12.0pt" android:textColor="@color/colorTextTertiary" android:id="@+id/tv_temperature_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0pt" android:text="0.7" android:paddingHorizontal="4.0pt" />
                    <TextView android:textSize="13.0pt" android:textStyle="bold" android:textColor="@color/colorTextPrimary" android:paddingBottom="6.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0pt" android:text="@string/local_model_max_tokens" android:paddingHorizontal="4.0pt" />
                    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/colorContainerBrighten" app:cardCornerRadius="12.0pt" app:cardElevation="1.0pt">
                        <SeekBar android:id="@+id/seekbar_max_tokens" android:layout_width="fill_parent" android:layout_height="40.0pt" android:max="4096" android:progress="512" android:paddingHorizontal="16.0pt" />
                    </androidx.cardview.widget.CardView>
                    <TextView android:textSize="12.0pt" android:textColor="@color/colorTextTertiary" android:id="@+id/tv_max_tokens_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0pt" android:text="512" android:paddingHorizontal="4.0pt" />
                    <com.aicontrol.android.widget.KButton android:textSize="14.0pt" android:id="@+id/btn_save_params" android:layout_width="fill_parent" android:layout_height="42.0pt" android:layout_marginTop="24.0pt" android:text="@string/local_model_save_params" />
                    <TextView android:textSize="13.0pt" android:textStyle="bold" android:textColor="@color/colorTextPrimary" android:paddingBottom="6.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0pt" android:text="@string/local_model_base_url_title" android:paddingHorizontal="4.0pt" />
                    <TextView android:textSize="12.0pt" android:textColor="@color/colorTextTertiary" android:paddingBottom="6.0pt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/local_model_base_url_tip" android:paddingHorizontal="4.0pt" />
                    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/colorContainerBrighten" app:cardCornerRadius="12.0pt" app:cardElevation="1.0pt">
                        <EditText android:textSize="13.0pt" android:textColor="@color/colorTextPrimary" android:textColorHint="@color/colorTextTertiary" android:id="@+id/et_base_url" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="42.0pt" android:hint="@string/local_model_base_url_hint" android:singleLine="true" android:inputType="textUri" android:paddingHorizontal="12.0pt" />
                    </androidx.cardview.widget.CardView>
                    <TextView android:textSize="13.0pt" android:textStyle="bold" android:textColor="@color/colorTextPrimary" android:paddingBottom="6.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0pt" android:text="@string/local_model_api_key_title" android:paddingHorizontal="4.0pt" />
                    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/colorContainerBrighten" app:cardCornerRadius="12.0pt" app:cardElevation="1.0pt">
                        <EditText android:textSize="13.0pt" android:textColor="@color/colorTextPrimary" android:textColorHint="@color/colorTextTertiary" android:id="@+id/et_api_key" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="42.0pt" android:hint="@string/local_model_api_key_hint" android:singleLine="true" android:inputType="text" android:paddingHorizontal="12.0pt" />
                    </androidx.cardview.widget.CardView>
                    <com.aicontrol.android.widget.KButton android:textSize="14.0pt" android:id="@+id/btn_save_server_config" android:layout_width="fill_parent" android:layout_height="42.0pt" android:layout_marginTop="12.0pt" android:text="@string/local_model_save_server_config" />
                    <com.aicontrol.android.widget.KButton android:textSize="14.0pt" android:id="@+id/btn_delete_model" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="42.0pt" android:layout_marginTop="10.0pt" android:text="@string/local_model_delete" app:btnBackground="@color/colorContainerBrighten" app:btnBorderColor="@color/colorErrorPrimary" app:btnTextColor="@color/colorErrorPrimary" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>